--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
-    "test:e2e:mock": "npx jest --config ./jest.config.js --runInBand --forceExit ./tests/e2e",
     "test:e2e": "jest --watch --config jest-e2e.config.js tests/e2e",
+    "test:coverage": "jest --coverage --config jest-e2e.config.js tests/e2e",
     "db:seed": "tsx --env-file .env ./prisma/seed.ts"
   },
   "keywords": [],
