--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
+    "build": "tsup src",
+    "start": "node --env-file .env dist/server.js",
     "test:e2e": "jest --watch --config jest-e2e.config.js tests/e2e",
     "test:coverage": "jest --coverage --config jest-e2e.config.js tests/e2e",
     "db:seed": "tsx --env-file .env ./prisma/seed.ts"
@@ -32,6 +34,7 @@
     "jest": "^30.0.5",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
+    "tsup": "^8.5.0",
     "zod": "^4.0.14"
   }
 }
