--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "pg": "^8.16.3",
     "prisma": "^6.13.0",
     "tsx": "^4.20.3",
@@ -33,6 +35,8 @@
     "ioredis": "^5.7.0",
     "jest": "^30.0.5",
     "supertest": "^7.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.1",
     "tsup": "^8.5.0",
     "zod": "^4.0.14"
